--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "lucide-react": "^0.542.0",
     "next": "15.5.2",
     "next-auth": "^4.24.11",
+    "next-pwa": "^5.6.0",
     "prisma": "^6.15.0",
     "react": "19.1.0",
     "react-dom": "19.1.0",
