Update terminology from "Yurt" to "Kurum" in registration and login pages, and adjust manifest description

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,7 +1,7 @@
 {
   "name": "ARDN Öğrenci Takip Sistemi",
   "short_name": "ARDN",
-  "description": "Yurt öğrenci puan takip ve yönetim sistemi - Offline erişim destekli",
+  "description": "Kurum öğrenci puan takip ve yönetim sistemi - Offline erişim destekli",
   "start_url": "/",
   "display": "standalone",
   "background_color": "#122118",
